--- a/package.json
+++ b/package.json
@@ -22,9 +22,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "font-awesome": "^4.7.0",
+    "font-awesome-loader": "^1.0.2",
+    "html-webpack-plugin": "^2.29.0",
+    "node-sass": "^4.5.3",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "style-loader": "^0.18.2"
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9"
   }
 }
