--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "reactjs",
     "timepicker"
   ],
-  "author": "Dan Palma",
+  "author": "Dan Palma <daniel_palma@yahoo.com>",
   "license": "MIT",
+  "repository": "git@github.com:dpalma/react-simple-time-picker.git",
   "jest": {
     "moduleNameMapper": {
       "\\.(css|less|scss)$": "identity-obj-proxy"
@@ -29,6 +30,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "file-loader": "^0.11.2",
     "font-awesome": "^4.7.0",
     "font-awesome-loader": "^1.0.2",
@@ -39,6 +41,7 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9"
