--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-dropdown-timepicker",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Drop-down time-picker for ReactJS",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
-    "build": "node node_modules/webpack/bin/webpack.js",
+    "build-pages": "node node_modules/webpack/bin/webpack.js --config webpack.config.pages.js",
+    "build-lib": "node node_modules/webpack/bin/webpack.js --config webpack.config.lib.js",
     "test": "node node_modules/jest/bin/jest.js"
   },
   "keywords": [
